fix: Correct Vite build configurations for all applications
- Use 'npm run build:client' instead of 'vite build' for proper client-only builds
- Set outputDirectory to 'dist/spa' to match vite.config.ts output settings
- Fix deployment issues for nova-haven, curry-landing, nova-works, and pixel-verse
- Ensure all Vite applications build correctly for static deployment on Vercel

--- a/curry-landing/vercel.json
+++ b/curry-landing/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "framework": "vite",
-  "buildCommand": "vite build",
-  "devCommand": "npm run dev",
+  "buildCommand": "npm run build:client",
+  "devCommand": "vite --port $PORT",
   "installCommand": "npm install",
-  "outputDirectory": "dist",
+  "outputDirectory": "dist/spa",
   "env": {
     "NODE_ENV": "production"
   },
