--- a/nova-haven/vercel.json
+++ b/nova-haven/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "npm run build:client",
+  "installCommand": "npm install",
+  "buildCommand": "npx vite build",
   "outputDirectory": "dist/spa",
   "env": {
     "NODE_ENV": "production"
