--- a/nova-haven/package.json
+++ b/nova-haven/package.json
@@ -25,9 +25,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
-
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "vite": "^6.2.2",
     "zod": "^3.23.8"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.28.1"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.9.0",
