Add @swc/core-linux-x64-gnu as optional dependency for Vercel

--- a/nova-haven/package.json
+++ b/nova-haven/package.json
@@ -31,7 +31,8 @@
     "zod": "^3.23.8"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.28.1"
+    "@rollup/rollup-linux-x64-gnu": "^4.28.1",
+    "@swc/core-linux-x64-gnu": "^1.11.24"
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.9.0",
