--- a/nova-haven/package.json
+++ b/nova-haven/package.json
@@ -70,7 +70,11 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-collapsible": "^1.1.0"
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "tailwindcss": "^3.4.11",
+    "tailwindcss-animate": "^1.0.7",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.21"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.28.1",
@@ -87,17 +91,13 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
     "@types/three": "^0.176.0",
-    "autoprefixer": "^10.4.21",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.6.2",
     "globals": "^15.9.0",
-    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
     "react-hook-form": "^7.53.0",
     "serverless-http": "^3.2.0",
-    "tailwindcss": "^3.4.11",
-    "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "tsx": "^4.7.0",
     "typescript": "^5.5.3",
