--- a/nova-works/package.json
+++ b/nova-works/package.json
@@ -77,7 +77,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "vite": "^6.2.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@swc/core": "^1.11.24",
@@ -88,7 +89,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.176.0",
-    "cors": "^2.8.5",
     "globals": "^15.9.0",
     "prettier": "^3.5.3",
     "serverless-http": "^3.2.0",
